# aoc

./: .gitignore  aoc.cabal  default.nix  result.html
app/: Main.hs
src/: Aoc.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
src/Y2019/: Day1.hs
test/: Main.hs
