name:                aoc
synopsis:            aoc
version:             0.0.1.0
homepage:            https://github.com/your_github_username/aoc
license:             BSD3
author:              Your Name
maintainer:          Your Name
copyright:           Your Name
category:            Package.Category
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Aoc, Day1, Day2, Day3, Day4
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5
                     , attoparsec
                     , bytestring    
                     , containers  
                     , directory
                     , split  
                     , text  

executable aoc
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , aoc
                    , criterion  

test-suite aoc-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , aoc
                  , hedgehog
